localStorage chat resolve

--- a/day_10/style.css
+++ b/day_10/style.css
@@ -3,21 +3,30 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
-.form {
-  margin: 100px;
+
+body {
+  background: #4e4e4e;
 }
 
-.form-login, .form-password {
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.form {
+  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-login,
+.form-password {
   display: block;
   margin-bottom: 15px;
   min-width: 250px;
   min-height: 30px;
+  padding-left: 10px;
 }
 
 .form-btn {
@@ -34,4 +43,107 @@
 .form-btn:hover {
   background-color: #237F28;
   color: #fff;
+}
+
+label {
+  display: block;
+  color: bisque;
+  margin-bottom: 4px;
+}
+
+.chat__message {
+  display: block;
+}
+
+.chat {
+  margin-top: 100px;
+}
+
+.chat__header {
+  display: flex;
+  align-items: center;
+  min-width: 100%;
+  min-height: 50px;
+  padding-left: 10px;
+  border: 1px solid white;
+}
+
+.chat__user-name {
+  display: block;
+  color: rgb(255, 255, 255);
+}
+
+.chat__messages {
+  min-height: 400px;
+  border: 1px solid white;
+}
+
+.chat__first-user,
+.chat__second-user {
+  display: flex;
+  min-height: 50px;
+}
+
+.chat__first-user {
+  align-items: center;
+  padding-left: 15px;
+}
+
+.chat__second-user {
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 15px;
+}
+
+.chat__message {
+  display: block;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 6px;
+  color: white;
+}
+
+.chat__message_first {
+  background: #6b6666;
+}
+
+.chat__message_second {
+  background: #615f5f;
+}
+
+.chat__insert {
+  display: flex;
+}
+
+.chat__input {
+  background: #4e4e4e;
+  outline: none;
+  border: 1px solid white;
+  min-height: 35px;
+  color: white;
+  padding-left: 10px;
+  min-width: 85%;
+  flex-grow: 1;
+}
+
+.chat__btn {
+  min-width: 10%;
+  min-height: 35px;
+  border: 1px solid white;
+  color: white;
+  background: #4e4e4e;
+  outline: none;
+}
+
+.chat__btn:hover {
+  background: #2e2a2a;
+  cursor: pointer;
+}
+
+.d-hidden {
+  display: none;
+}
+
+.d-visible {
+  display: block;
 }
